--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <thead>
                         <tr>
                             <th>Fields</th>
+                            <th>Performance Indicator</th>
+                            <th>Storage Required</th>
+                            <th>Action</th> <!-- New column for action buttons -->
                         </tr>
                     </thead>
                     <tbody></tbody>
@@ -35,6 +38,9 @@
                     <thead>
                         <tr>
                             <th>Unused Index</th>
+                            <th>Performance Indicator</th>
+                            <th>Storage Saved</th>
+                            <th>Action</th> <!-- New column for action buttons -->
                         </tr>
                     </thead>
                     <tbody></tbody>
